--- a/default.css
+++ b/default.css
@@ -40,7 +40,7 @@ html {
 }
 
 body {
-  background-image: url("./assets/website\ background.png");
+  background-image: url("./assets/websitebackground.png");
   background-size: contain;
   margin: 0;
   padding: 0;
