--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin-top: var(--size-100);
+  margin-bottom: var(--size-24);
   grid-column: 2 / span 1;
   align-items: end;
   padding: var(--size-40) var(--size-30) var(--size-60);
@@ -86,11 +87,11 @@
 }
 
 .left-side-header {
+  padding: var(--size-10);
   display: flex;
   flex-direction: column;
-  background-color: #b8aa81;
-  box-shadow:  -20px -11px 20px 0px rgba(0, 0, 0, 0.15);
-  border-radius: 5px;
+  box-shadow: -2px 2px 10px 2px #bfbfbf;
+  border: 1px solid #ffffff;
 }
 
 .left-side-header h1 {
@@ -98,14 +99,14 @@
   margin-top: var(--size-14);
   font-family: var(--font-main);
   font-weight: 500;
-  color: var(--black);
+  color: #f2f1f4;
   font-size: var(--size-40);
   line-height: normal;
 }
 
 .left-side-header p {
   font-family: var(--font-main);
-  color: var(--black);
+  color: #f2f1f4;
   font-size: var(--size-20);
   line-height: 2.6vw;
   text-align: center;
@@ -161,7 +162,7 @@
 
 
 .skills {
-  margin-top: var(--size-24);
+  margin-top: var(--size-120);
   padding: var(--size-40) 0rem var(--size-40);
 }
 
@@ -330,6 +331,17 @@
   box-shadow: -2px 2px 10px 2px #bfbfbf;
 }
 
+
+.featured-card-header {
+  display: flex;
+  flex-direction: column;
+  gap: var(--size-10);
+}
+
+.featured-card-header p {
+  font-size: var(--size-16);
+}
+
 .featured-card img {
   width: 20vw;
 }
@@ -384,17 +396,24 @@
   margin-left: var(--size-10);
 }
 
+#feedYourHead {
+  width: 70%;
+}
+
 .footer {
   background-color: var(--dark-green);
-  height: var(--size-150);
+  padding: var(--size-40) 0
 }
 
 .footer-content {
   justify-self: center;
   grid-column: 2/ span 1;
+  display: grid;
+  grid-template-areas: "img-container" "form";
 }
 
 .footer-img-container {
+  grid-area: img-container;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -404,5 +423,79 @@
 .footer-img-container a img {
   width: var(--size-40)
 }
+
+.form {
+  background-color: #FFFFFF;
+  padding: 30px;
+  border-radius: 5px;
+}
+.form label {
+  display: none;
+}
+
+.form-container > form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+.form-container > form input.input-field {
+  grid-column: span 1;
+  height: 40px;
+  max-width: 100%;
+  padding: 0 10px;
+  outline: none;
+  border: 1px solid #E6E8F2;
+  border-radius: 3px;
+}
+.form-container > form textarea {
+  grid-column: span 2;
+  padding: 10px;
+  border: 1px solid #E6E8F2;
+  border-radius: 3px;
+  font-size: 14px;
+}
+
+.form-container > form .submit-area {
+  grid-column: span 2;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.form-container > form .submit-area .submit-button {
+  grid-column: span 2;
+  height: 40px;
+  background-color: #2576FF;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  color: #FFFFFF;
+  font-weight: bold;
+}
+.form-container > form .submit-area input.button {
+  appearance: none;
+  -webkit-appearance: none;
+  cursor: pointer;
+  height: 44px;
+  outline: none;
+  border: none;
+  background-color: var(--dark-green);
+  color: #f2f1f4;
+  border-radius: 22px;
+  padding: 0 var(--size-30);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.5s;
+  font-family: var(--font-main);
+  font-size: var(--size-20);
+}
+
+.form-container > form .submit-area input.button:hover {
+  color: var(--dark-green);
+  background-color: #f2f1f4;
+  border: 1px solid var(--dark-green);
+}
+
+
 
 
