work on footer layout

--- a/default.css
+++ b/default.css
@@ -9,7 +9,7 @@
   --black: #1a1616;
   --sea-green: #00B9AE;
   --ship-gray: #7B8E8D;
-  --current: #235959;;
+  --current: #235959;
   --dark-green: #03312E;
   --emerald: #02C278;
 
