work on media queries

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@
 .hero-section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-areas: "leftSide rightSide rightSide";
   margin-top: var(--size-100);
   margin-bottom: var(--size-24);
   grid-column: 2 / span 1;
@@ -76,12 +77,12 @@
 }
 
 .left-side {
+  grid-area: leftSide;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   width: 25vw;
-  gap: var(--size-30);
   padding: 0rem 0rem var(--size-30);
 
 }
@@ -113,7 +114,7 @@
 }
 
 .right-side {
-  grid-column: 2/ span 2;
+  grid-area: rightSide;
   display: flex;
   justify-content: center;
   position: relative;
