--- a/default.css
+++ b/default.css
@@ -76,7 +76,7 @@ p {
 
 h1 {
   font-family: var(--font-main);
-    font-size: 2.6vw;
+    font-size: var(--size-40);
     margin: 0;
     color: #f6f5fae6;
 }
