--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@
   font-family: var(--font-main);
   color: var(--color-three);
   font-weight: 500;
-  font-size: var(--size-14);
+  font-size: var(--size-16);
 }
 
 .navbar-toggler {
@@ -71,7 +71,7 @@
   margin-top: var(--size-100);
   margin-bottom: var(--size-24);
   grid-column: 2 / span 1;
-  align-items: end;
+  align-items: center;
   padding: var(--size-40) var(--size-30) var(--size-60);
   gap: var(--size-80);
 }
@@ -88,7 +88,7 @@
 }
 
 .left-side-header {
-  padding: var(--size-10);
+  padding: var(--size-20);
   display: flex;
   flex-direction: column;
   box-shadow: -2px 2px 10px 2px #bfbfbf;
@@ -100,14 +100,14 @@
   margin-top: var(--size-14);
   font-family: var(--font-main);
   font-weight: 500;
-  color: #f2f1f4;
+  color: #f6f5fae6;
   font-size: var(--size-40);
   line-height: normal;
 }
 
 .left-side-header p {
   font-family: var(--font-main);
-  color: #f2f1f4;
+  color: #f6f5fae6;
   font-size: var(--size-20);
   line-height: 2.6vw;
   text-align: center;
@@ -176,38 +176,19 @@
   font-family: var(--font-main);
   font-size: 2.6vw;
   margin: 0;
-  color:#bfbfbf
+  color: #f6f5fae6;
 }
 
 .skills-title p {
-  color: #ffffff;
+  color: #f6f5fae6;
 }
 
 .skills-container {
   grid-column: 2 / span 1;
-  display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: 1fr 1fr;
-  grid-template-areas: "certs-list skills-right";
-  gap: 110px;
+  display: flex; 
+  justify-content: center;
 }
 
-.certs-list {
-  grid-column: 2 / span 1;
-  grid-area: certs-list;
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: var(--size-20);
-  grid-template-areas:
-    "uconn react"
-    "html mimo";
-  align-items: center;
-}
-
-.certs-item {
-  display: flex;
-}
 
 
 .skills-item h3 {
@@ -221,20 +202,28 @@
 }
 
 .skills-right {
-  grid-area: skills-right;
-  display: flex;
-  justify-content: center;
-  align-self: center;
-  position: relative;
-  width: 30rem;
-  height: 25rem;
+  display: grid; 
+
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  
+  grid-template-areas: 
+ '. . HTML CSS . .'
+ 'JavaScript React Node Github Google Figma'
+ '. . Zapier GMail . .';
+  
+  gap: 0px;
+  height: 100%;
+  gap: var(--size-40);
+  padding-top: var(--size-10);
+  justify-items: center;
+  align-items: center;
 }
 
 .skills-right .bubble-small {
   width: var(--size-60);
   height: var(--size-60);
   padding: var(--size-10);
-  position: absolute;
   border-radius: var(--size-30);
 }
 
@@ -243,53 +232,86 @@
   height: var(--size-80);
   padding: var(--size-16);
   border-radius: var(--size-40);
-  position: absolute;
+
 }
 
 .bubble-large, .bubble-small {
   display: flex;
   background-color: #ffffff;
+  margin-top: var(--size-20);
 }
 
 .certs-item, .bubble-large, .bubble-small {
   box-shadow: -2px 2px 10px 2px #bfbfbf
 }
 
+.button-container {
+  grid-column: 2/span 1;
+  display: flex;
+  justify-content: center;
+  padding-top: var(--size-30);
+}
+
+button{
+  
+  transition: 0.5s;
+  box-shadow: -2px 2px 10px 2px #bfbfbf;
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
+  padding: var(--size-14);
+}
+
+button > a {
+  color: #f6f5fae6;
+  font-family: var(--font-main);
+  font-size: var(--size-30);
+}
+
+button:hover {
+  background-color: var(--dark-green);
+}
+
 
 .css {
-  top: 0.625rem; 
-  left: 4rem;
+grid-area: CSS;
 }
 
 .html {
-  top: 18.125rem; 
-  left: 9.6875rem; 
+grid-area: HTML;
 }
 
 .javascript {
-  top: 0.625rem; 
-  left: 10.9375rem;
+grid-area: JavaScript;
 }
 
 .react {
-  top: 10.75rem;
-  left: 2.75rem;
+grid-area: React;
 }
 
+
 .node {
-  top: 10.75rem;
-  left: 16.375rem;
+grid-area: Node;
 }
 
 .github {
-  top: 19.375rem;
-  left: 22.75rem;
+grid-area: Github;
 }
 
 .figma {
-  top: 0.625rem; 
-  left: 23.75rem;
+grid-area: Figma;
 }
+
+.google {
+grid-area: Google;
+}
+.gmail {
+grid-area: GMail;
+}
+
+.zapier {
+grid-area: Zapier;
+} 
 
 /* -----------------------------SKILLS END------------------------ */
 
@@ -321,7 +343,7 @@
 }
 
 .featured-card {
-  width: 28%;
+  width: 20vw;
   display: flex;
   border: 1px solid #ffffff;
   padding: var(--size-30);
@@ -402,8 +424,15 @@
 }
 
 .footer {
-  background-color: var(--dark-green);
+  background-color: var(--current);
   padding: var(--size-40) 0
+}
+
+.footer-title {
+  grid-column: 2/ span 1;
+  display: flex;
+  justify-content: center;
+  padding-bottom: var(--size-20);
 }
 
 .footer-content {
@@ -423,6 +452,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  gap: var(--size-30);
 }
 
 
@@ -506,6 +536,16 @@
   color: var(--dark-green);
   background-color: #f2f1f4;
   border: 1px solid var(--dark-green);
+}
+
+.footers-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: var(--dark-green);
+  grid-column: 2/ span 1;
+  padding: var(--size-30) 0;
 }
 
 
