--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@
 .navbar-toggler {
   position: absolute;
   right: var(--size-20);
-  top: var(--size-10);
+  bottom: var(--size-6);
   outline: none;
   background-color: transparent;
   border: 1px solid transparent;
@@ -174,7 +174,6 @@
 
 .skills-title h1 {
   font-family: var(--font-main);
-  font-size: 2.6vw;
   margin: 0;
   color: #f6f5fae6;
 }
@@ -445,20 +444,18 @@ grid-area: Zapier;
 
 .btm-card {
   grid-area: btm-card;
-}
-
-.btm-card-inner {
   width: 20vw;
-  height: 59vh;
   display: flex;
   border: 1px solid #ffffff;
-  padding: var(--size-20);
+  padding: var(--size-30);
   flex-direction: column;
   gap: var(--size-10);
   justify-content: center;
   align-items: center;
   box-shadow: -2px 2px 10px 2px #bfbfbf;
+  transition: 0.5s;
 }
+
 
 .btm-card-header {
   display: flex;
@@ -468,6 +465,8 @@ grid-area: Zapier;
   gap: var(--size-16);
 }
 
+
+
 .btm-card-header h1 {
   font-size: var(--size-24);
 }
@@ -475,6 +474,11 @@ grid-area: Zapier;
   font-size: var(--size-16);
   margin-bottom: var(--size-20);
   text-align: center;
+}
+
+
+.btm-card:hover {
+  background-color: var(--dark-green);
 }
 
 .footer-content p {
@@ -507,13 +511,13 @@ grid-area: Zapier;
 .form-container > form {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+  gap: var(--size-20);
 }
 .form-container > form input.input-field {
   grid-column: span 1;
-  height: 40px;
+  height: var(--size-40);
   max-width: 100%;
-  padding: 0 10px;
+  padding: 0 var(--size-10);
   outline: none;
   border: 1px solid #E6E8F2;
   border-radius: 3px;
@@ -525,10 +529,10 @@ grid-area: Zapier;
 
 .form-container > form textarea {
   grid-column: span 2;
-  padding: 10px;
+  padding: var(--size-10);
   border: 1px solid #E6E8F2;
   border-radius: 3px;
-  font-size: 14px;
+  font-size: var(--size-14);
 }
 
 .form-container > form .submit-area {
@@ -537,16 +541,7 @@ grid-area: Zapier;
   display: flex;
   justify-content: center;
 }
-.form-container > form .submit-area .submit-button {
-  grid-column: span 2;
-  height: 40px;
-  background-color: #2576FF;
-  outline: none;
-  border: none;
-  border-radius: 5px;
-  color: #FFFFFF;
-  font-weight: bold;
-}
+
 .form-container > form .submit-area input.button {
   appearance: none;
   -webkit-appearance: none;
