--- a/styles.css
+++ b/styles.css
@@ -333,18 +333,19 @@ button:hover {
   color: #f6f5fae6;
 }
 
+
+
 .articles-list {
-  grid-column: 2 / span 1;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-
-
-  gap: var(--size-24);
-  height: 100%;
-  align-items: center;
-  justify-items: center;
+    grid-column: 2 / span 1;
+    display: grid;
+    grid-template-columns: repeat(3, 21vw);
+    gap: 1vw;
+    height: 100%;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    justify-content: space-evenly;
 }
-
 .articles-list-grid-item {
   display: flex;
     flex-direction: column;
@@ -378,11 +379,11 @@ button:hover {
 
 .articles-grid-footer {
   justify-self: center;
-  grid-column: 1/ span 2;
+  grid-column: 2/ span 1;
 }
 
 .more-to-come {
-  width: 400px;
+  width: 30vw;
   transition: 0.5s;
 }
 
